# AI_upskilling

./: environment.yaml  pyproject.toml
task_10/: environment.yaml  function_app.py  host.json  launch_frontend.py  requirements.txt  streamlit_app.py
task_10/src/: rag_system.py  telemetry.py
task_10/test/: conftest.py
task_2/: README.md  main.bicep
task_3/: .env.example  main.py
task_3/logs/: usage.md
task_4/: .env.example  environment.yaml  output.txt
task_4/prompts/: best.txt
task_4/src/: game.py
task_5/: .env.example
task_5/backlog/: sprint1.md
task_5/src/: game.py
task_6/: environment.yaml
task_6/notebooks/: queries.ipynb
task_6/src/: index_pdf.py  main.py  search.py
task_7/: environment.yaml
task_7/notebooks/: langchain_queries.ipynb
task_7/src/: rag_search.py  search.py
task_9/: .env.example  function_app.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_requirements.txt
task_9/test/: test_rag_system.py
